# nlpdata

./: README.md  pyproject.toml  setup.py  ubuild.py  uranium
data/config/: text_data.yaml
nlpdata/: base_training_data_setup.py  nlu_db_driver.py
nlpdata/postagger/: pos_tagger.py
nlpdata/postagger/ohsumed/: ohsu_med_pos_tagger.py
nlpdata/postagger/reuters/: reuters_med_pos_tagger.py  reuters_pos_tagger.py
tests/postagger/: test_posttagger.py  test_sample.py
tests/postagger/ohsumed/: test_ohsu_med.py  test_ohsumed.py
tests/postagger/reuters/: test_reuters.py
