[tool.poetry]
name = "nlpdata"
version = "0.1.0"
description = "A natural language processing training database"
authors = ["ludwig-ai"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
pandas = "^1.1.2"
tensorflow = "^2.3.1"
pytorch = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
